TINY-8371: Tweak the brand logo height to fix issue where it was cut off

--- a/modules/oxide/src/less/theme/components/statusbar/statusbar.less
+++ b/modules/oxide/src/less/theme/components/statusbar/statusbar.less
@@ -81,8 +81,8 @@
   .tox-statusbar__branding {
     svg {
       fill: currentColor;
-      height: 1.3em;
-      vertical-align: -.3em;
+      height: 1.4em;
+      vertical-align: -.4em;
       width: 4.0625em;
     }
   }
